Remove fixed nav bar on mobile devices

--- a/sass/site/header/_header.scss
+++ b/sass/site/header/_header.scss
@@ -8,16 +8,13 @@
 	}
 }
 .site-header {
-	position: fixed;
-	top:0;
-    left:0;
-    right:0;
-    z-index:170;
-    margin:0 auto;
+	position: relative;
+	//padding-right: 1em;
 	font-family: $font__rubik;
 	color: #fff;
-	background-color: #191d48;
+	background-color: #b30606;
 	width:100%;
+	margin:0 auto;
     
    
     //height: 60px;
@@ -33,8 +30,15 @@
 	//z-index: 170;*/
 
 	
-	@media screen and (min-width: $query__small) {
+	@media screen and (min-width: 48em) {
 		padding: 1em 2em;
+		position: fixed;
+		top:0;
+	    left:0;
+	    right:0;
+	    z-index:170;
+	    margin:0 auto;
+	    width: 100%;
 	}
 
 
